Fix some compiler smells for Java 21